--- a/pizza.html
+++ b/pizza.html
@@ -7,7 +7,7 @@
     <title>Pizza application</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery.js"></script>
+    <!-- <script src="js/jquery.js"></script> -->
     <script src="js/scripts.js"></script>
 </head>
 <body>
@@ -42,38 +42,27 @@
        </div>
        <div class="col-md-3 toppings">
           <label><h3>Choose Pizza toppings:</h3></label><br>
-          <label>
-            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Pepperona  &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong>
-          </label><br>
-          <label>
-            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Mushrooms &nbsp; <strong>  Price:  Rwf <span>2500 </span></strong>
-          </label><br>
-          <label>
-            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Sausage  &nbsp; <strong>  Price:  Rwf <span>2000 </span></strong>
-          </label><br>
-          <label>
-            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Onions  &nbsp; <strong> Price:  Rwf <span> 1000 </span></strong>
-          </label><br>
-          <label>
-            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Extracheese &nbsp;  <strong> Price:  Rwf <span>2000 </span></strong>
-          </label><br>
-          <label>
-            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Bacon &nbsp; <strong> Price:  Rwf <span> 3000 </span></strong>
-          </label><br>
+            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Pepperona</span> &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong><br>
+            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Mushrooms</span> &nbsp;<strong> Price:  Rwf <span>2500 </span></strong><br>
+            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Sausage</span> &nbsp;<strong> Price:  Rwf <span>2000 </span></strong><br>
+            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Onions</span> &nbsp;<strong> Price:  Rwf <span> 1000 </span></strong><br>
+            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Extracheese</span> &nbsp;<strong> Price:  Rwf <span>2000 </span></strong><br>
+            <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Bacon</span> &nbsp;<strong> Price:  Rwf <span> 3000 </span></strong><br>
         </div>
         <div class="col-md-3">
           <label> <h3>Choose Pizza Crusts:</h3></label><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">   
-           Thin Crust &nbsp;<strong> Price:  Rwf <span>  1000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> Flatbread Crust &nbsp;<strong> Price:  Rwf <span>  1000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> Crispy crust &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> Stuffed crust &nbsp;<strong> Price:  Rwf <span>  3000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> Gluten-free &nbsp;<strong> Price:  Rwf <span>  4000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> Thick Crust &nbsp;<strong> Price:  Rwf <span>  5000</span> </strong><br>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Thin Crust</span> &nbsp;<strong> Price:  Rwf <span>  1000</span> </strong><br>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Flatbread Crust</span> &nbsp;<strong> Price:  Rwf <span>  1000</span> </strong><br>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Crispy crust</span> &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong><br>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Stuffed crust</span> &nbsp;<strong> Price:  Rwf <span>  3000</span> </strong><br>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Gluten-free</span> &nbsp;<strong> Price:  Rwf <span>  4000</span> </strong><br>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Thick Crust</span> &nbsp;<strong> Price:  Rwf <span>  5000</span> </strong><br>
         </div>
         <button type="submit" class="btn-checkout">Checkout</button>
         <div class="col-md-3 checkout"></div>
-        <p></p>
+        <div class="delivary"></div>
+        <p class="total"></p>
+        
     </div>
     <div class="row pizza medium">
       <div class="col-md-4" >
@@ -82,7 +71,7 @@
       <div class="col-md-4 toppings">
           <label><h3> Choose Pizza toppings:</h3></label><br>
           <label>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Pepperona  &nbsp;<strong> Price:  Rwf <span>  3000</span> </strong>
+          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"><span>Pepperona</span>  &nbsp;<strong> Price:  Rwf <span>  3000</span> </strong>
         </label><br>
         <label>
           <input type="radio" class="sm-radio-btn" onclick="checkedbutton()">Mushrooms &nbsp;<strong> Price:  Rwf <span> 3500</span> </strong>
@@ -150,6 +139,7 @@
       <div class="col-md-3 checkout"></div>
     </div>
   </form>
+  <div class="summary">Lorem ipsum dolor sit amet, c </div>
   <div class="footer">
     Contact on:pizza you want 
     <img src="images/twitter.png"> 
