Edit div summary

--- a/pizza.html
+++ b/pizza.html
@@ -139,7 +139,7 @@
       <div class="col-md-3 checkout"></div>
     </div>
   </form>
-  <div class="summary">Lorem ipsum dolor sit amet, c </div>
+  <div class="summary"></div>
   <div class="footer">
     Contact on:pizza you want 
     <img src="images/twitter.png"> 
