Change pizza you want to pizza place

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
 
     <div class="jumbotron">
-      <h1>PIZZA YOU WANT!</h1>
+      <h1>PIZZA PLACE!</h1>
     
     </div>
     <div class="row">
       <div class="col-md-7">
         <h2>  Our Story!</h2>
-        <p>All our Pizzas are Homemade from scratch using the finest cheese available. We do everything by hand: cut our own vegetables, create our own pizza sauce & make our own dough daily all with the finest, freshest ingredients. In our large family dining room our friendly staff makes you feel at home. We welcome you & your family to <strong>The pizza you want!</strong>. Please come Join us in our spacious dining room or Outdoor Patio! </p>
+        <p>All our Pizzas are Homemade from scratch using the finest cheese available. We do everything by hand: cut our own vegetables, create our own pizza sauce & make our own dough daily all with the finest, freshest ingredients. In our large family dining room our friendly staff makes you feel at home. We welcome you & your family to <strong>The pizza place!</strong>. Please come Join us in our spacious dining room or Outdoor Patio! </p>
         <h3>Dear customer,</h3>
         <p>Kindly we want to let you know that this website is for you, So whenever you want to look for our our special pizza, our special menu and to order your pizza size,toppings and it's Crusts kindly start by choose the size of pizza found in the right of our page. </p>
       </div>
@@ -117,10 +117,10 @@
   </form>
   <div class="summary"></div>
   <div class="footer">
-    Contact on:pizza you want 
+    Contact on:pizza place 
     <img src="images/twitter.png"> 
     <img src="images/facebook.png"> 
-    <p>Pizza you want! @2019</p>     
+    <p>Pizza place! @2019</p>     
   </div>
 </body>
 </html>
