Edit checkout div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Pizza application</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <!-- <script src="js/jquery.js"></script> -->
+    <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
 </head>
 <body>
@@ -60,8 +60,10 @@
         </div>
         <button type="submit" class="btn-checkout">Checkout</button>
         <div class="col-md-3 checkout"></div>
-        <div class="delivary"></div>
-        <p class="total"></p>
+        <div class="delivary">
+         <p class="total"></p>
+        </div>
+        <!-- <p class="total"></p> -->
         
     </div>
     <div class="row pizza medium">
@@ -80,12 +82,12 @@
       <div class="col-md-3">
         <label> <h3>Choose Pizza Crusts:</h3></label><br>
         <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Thin Crust</span> &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Flatbread Crust</span> &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Crispy crust</span> &nbsp;<strong> Price:  Rwf <span>  3000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Stuffed crust</span> &nbsp;<strong> Price:  Rwf <span>  4000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Gluten-free</span> &nbsp;<strong> Price:  Rwf <span>  5000</span> </strong><br>
-          <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Thick Crust</span> &nbsp;<strong> Price:  Rwf <span>  6000</span> </strong><br>
-        </div>
+        <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Flatbread Crust</span> &nbsp;<strong> Price:  Rwf <span>  2000</span> </strong><br>
+        <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Crispy crust</span> &nbsp;<strong> Price:  Rwf <span>  3000</span> </strong><br>
+        <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Stuffed crust</span> &nbsp;<strong> Price:  Rwf <span>  4000</span> </strong><br>
+        <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Gluten-free</span> &nbsp;<strong> Price:  Rwf <span>  5000</span> </strong><br>
+        <input type="radio" class="sm-radio-btn" onclick="checkedbutton()"> <span>Thick Crust</span> &nbsp;<strong> Price:  Rwf <span>  6000</span> </strong><br>
+      </div>
       <button type="submit" class="btn-checkout">Checkout</button>
       <div class="col-md-3 checkout"></div>
     </div>
